--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   path_provider: ^1.6.0
   shared_preferences: ^0.5.6+1
+  wave_progress_widget: ^0.0.1
 
 dev_dependencies:
   flutter_test:
