--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.6+1
   wave_progress_widget: ^0.0.1
+  get_it: ^4.0.0
 
 dev_dependencies:
   flutter_test:
